praktikum 2 update coding

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </article>
 
     </section>
-    <section id="#ContactMe"> 
+    <section id="ContactMe"> 
         <h2>Contact Me</h2>
         <p>Saya ikhsanudin,saya adalah mahasiswa Informatika di Universitas Amikom Yogyakarta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non facere mollitia, est deleniti, architecto, officiis perspiciatis provident tempora dolores eaque magni illo error repellendus quis consectetur numquam quos nostrum velit.</p>
     </section>
